Refactoring with a frame class

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <!-- Bowling game tests -->
         <script type="text/javascript" src="spec/bowlinggame.spec.js"></script>
+        <script type="text/javascript" src="spec/frame.spec.js"></script>
     </head>
     <body>
 
